Smol loc update

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -66,12 +66,12 @@
 	tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
 	tec_loc_crime: "£crime£ $PLANET_CRIME_TITLE$"
 	tec_loc_crime_gestalt: "£crime£ $MOD_PLANET_CRIME_NO_HAPPINESS_MULT$"
-	tec_loc_happiness: "£happiness£ Happiness"
+	tec_loc_happiness: "£happiness£ $MOD_POP_HAPPINESS$"
 
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
 	tec_loc_trade_value_icon: "£trade_value£"
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
-	tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
+	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
 
 
 	tec_loc_building_slots: "$planet_automation_building_slot$"
@@ -81,12 +81,12 @@
 	tec_loc_naval_cap: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
 	tec_loc_admin_cap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
 
-	tec_loc_district: "£district£ District"
-	tec_loc_districts: "£district£ Districts"
-	tec_loc_building: "£building£ Building"
-	tec_loc_buildings: "£building£ Buildings"
-	tec_loc_blocker: "£blocker£ Blocker"
-	tec_loc_blockers: "£blocker£ Blockers"
+	tec_loc_district: "£district£ $DISTRICT$"
+	tec_loc_districts: "£district£ $DISTRICTS$"
+	tec_loc_building: "£building£ $BUILDING$"
+	tec_loc_buildings: "£building£ $BUILDINGS_TITLE$"
+	tec_loc_blocker: "£blocker£ $BLOCKER_DEPOSIT$"
+	tec_loc_blockers: "£blocker£ $BLOCKER_DEPOSITS$"
 
 	tec_loc_sr_tec_ai_power: "£sr_tec_ai_power£ $sr_tec_ai_power$"
 	tec_loc_sr_tec_machine_processing_empire: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$"
