--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3552,9 +3552,10 @@ mod_tec_hired_job_trade_add: "$tec_loc_trade_value$ from £job£ $private_hired$
 
 mod_tec_branch_building_base_production_mult: "Base Production from $BRANCH_OFFICE_BUILDINGS$"
 
-mod_tec_ruler_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $RULERS$"
-mod_tec_specialist_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $SPECIALISTS$"
-mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $WORKERS$"
+mod_tec_ruler_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_rulers$"
+mod_tec_specialist_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_specialists$"
+mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_workers$"
+mod_tec_slave_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_slave$"
 mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
 
 # Assembly Localization
