--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -76,8 +76,7 @@
 
 	tec_loc_building_slots: "$planet_automation_building_slot$"
 
-	tec_loc_edict_funds_icon:0 "£tec_edict_cap_add£"
-	tec_loc_edict_funds:0 "$tec_loc_edict_funds_icon$ $MOD_COUNTRY_EDICT_FUND_ADD$"
+	tec_loc_edict_funds:0 "£mod_country_edict_fund_add£  $MOD_COUNTRY_EDICT_FUND_ADD$"
 	tec_loc_naval_cap: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
 	tec_loc_admin_cap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
 
@@ -103,19 +102,19 @@
 	tec_loc_unity_jobs:0 "$mod_base_planet_administrators$"
 
 	tec_loc_job_output:0 "$mod_planet_jobs_produces_mult$"
-	tec_loc_biological_pop_output:0 "£tec_genetics_icon_icon£ Biological Pop Output"
-	tec_loc_robot_pop_output:0 "£job_roboticist£ Synthetic Pop Output"
-	tec_loc_cyborg_pop_output:0 "£tec_cyborg_icon£ Cyborg Pop Output"
+	tec_loc_biological_pop_output:0 "$mod_planet_jobs_organics_produces_mult$"
+	tec_loc_robot_pop_output:0 "$mod_planet_jobs_robotic_produces_mult$"
+	tec_loc_cyborg_pop_output:0 "$mod_planet_cyborg_jobs_produces_mult$"
 	tec_loc_cybernetic_pop_output:0 "£tec_cybernetic_icon£ Cybernetic Pop Output"
-	tec_loc_psionic_pop_output:0 "£tec_psionic_icon£ Psionic Pop Output"
+	tec_loc_psionic_pop_output:0 "$mod_planet_psionic_jobs_produces_mult$"
 	tec_loc_psychic_pop_output:0 "£tec_psychic_icon£ Psychic Pop Output"
-	tec_loc_automation_output:0 "£job_roboticist£ Automation Output"
+	tec_loc_automation_output:0 "£trigger_tec_automation£ Automation Output"
 
 	tec_loc_machine_processing:0 "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$"
 	tec_loc_machine_processing_redirection:0 "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$"
 
-	tec_loc_habitability:0 "£mod_habitability_floor_add£ Habitability"
-	tec_loc_planet_capacity:0 "£mod_planet_carry_cap_add£ $CARRY_CAP$"
+	tec_loc_habitability:0 "£mod_habitability_floor_add£ $HABITABILITY$"
+	tec_loc_planet_capacity:0 "£mod_planet_carry_cap_add£ $MOD_PLANET_CARRY_CAP_ADD$"
 	tec_loc_planet_build_speed:0 "£mod_planet_building_build_speed_mult£ $MOD_PLANET_BUILDING_BUILD_SPEED_MULT$"
 
 	tec_loc_terraform_speed:0 "£mod_country_terraform_speed_mult£ $MOD_COUNTRY_TERRAFORM_SPEED_MULT$"
