just some syncy sync

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2352,7 +2352,7 @@
 	civic_tec_machine_crimehostage_desc:0 "The initial purpose and main utility of this Artificial Consciousness was selecting, sorting and keeping criminals at bay at specific installations designed for re-insertion. Now, long time after they achieved sentience, they continue this arduous tasks with the descendants of the descendants of their organic masters, finding the most optimal and streamlined way of ensuring a criminal will never, ever, reincide, even if that means their demise."
 	civic_tec_machine_crimehostage_tooltip:0 "Starts with 5 pops being a Organic Species, if no other organic species is present, forced to be £job_organic_battery£ §YGrid-Amalgamated§!.\n\n£job_organic_battery£ Grid Amalgamated pops can be assigned to different types of production, based on specific £buildings£ Buildings on the planet, from §Y$tec_loc_research_resources$§! or £unity£ §Y$tec_loc_unity$§! to Increasing a £job_replicator£ §HExtraction effectivity§!.\n\n§HRogue Servitor Empires§!: §EA percentage of §HBiotrophies§! will adquire a special £job_organic_battery£ Grid Amalgamated Jobs§!\n"
 
-
+	# Converted into auth
 	civic_tec_machine_consensus:0 "Synthetic Consensus"
 	civic_tec_machine_consensus_desc:0 "This society of synthetic individuals conformed a common database of programs, protocols, decisions and elaborations, all perpetuated and maintained individually, while maintaining a great degree of autonomy and agency for each drone."
 	civic_tec_machine_consensus_tooltip:0 "a"
