--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -82,56 +82,20 @@
 
 	auth_tec_ai:0 "AI Administration"
 	auth_tec_ai_desc:0 "This society is not directly governed by a corp of politics, but a continuously evolving and efficient Artificial Intelligence, composed by a sophisticated computing network, controlling most of the aspect of it; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
-
 	TEC_AUTH_AI_TYPES: "['concept_tec_authority_type_ai_auth_type']\n"
-
-	auth_tec_ai_corporate:0 "AI Corporation"
-	auth_tec_ai_corporate_desc:0 "This mega-corporation is not directly governed by a corp of CEOs or business heads, but overseen and tracked by a super efficient Artificial Intelligence, which use a part of the transactional network as its computing network, controlling each economic and vital aspects of the citizens and administration; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
-
-	TEC_AUTH_AI_CORPORATE_TYPES: "['concept_tec_authority_type_ai_auth'], ['concept_tec_authority_type_corporate_type']\n"
-
-	auth_tec_hive_biological:0 "Biological Swarm"
-	auth_tec_hive_biological_desc:0 "This Collective Consciousness is formed by the unification of a series of several specialized subspecies under a same mind, genetic data and function, with a higher focus on biological evolution than technological development ;Each drone is an extension of the main consciousness, living and thinking cells of a bigger and expanding body, serving a pre-defined purpose since they are created and until they expire."
-
-	TEC_AUTH_TEC_HIVE_BIOLOGICAL_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
-
-	auth_hive_mind:0 "Hive Mind"
-	auth_hive_mind_desc:1 "Hive Minds operate as a single organism more than as a state. The population has no free will, and act as an extension of the Hive Mind itself - much like the limbs of a body.\n\nWhen cut off from the Mind, these drones become comatose and eventually wither and die. Any free individuals on planets owned by the Mind are driven away, killed, or simply treated as prey to feed the collective."
-
-	TEC_AUTH_HIVE_MIND_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
-
-	auth_tec_hive_cybernetic:0 "Cybernetic Collective"
-	auth_tec_hive_cybernetic_desc:0 "This collective consciousness was formed the moment a cybernetically interconnected network of billions of individuals minds became self aware, developing rudimentary cybernetic implants which ended up transforming the whole species and reshaping its society into a single unique organism of flesh and steel; their desire now is to expand their gift, and resisting it is futile."
-
-	TEC_AUTH_TEC_HIVE_CYBERNETIC_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
-
-	auth_machine_intelligence:0 "Machine Intelligence"
-	auth_machine_intelligence_desc:1 "Machine Intelligences are immense artificial group minds that have been networked into a single conscious entity. Most of the actual ''population'' in such an empire consists of mindless work units who perform their designated tasks without any semblance of free will.\n\nA small number of semi-autonomous agents are typically employed for more specialized tasks that benefit from some degree of independent initiative."
-
-	TEC_AUTH_MACHINE_INTELLIGENCE_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
-
-	auth_ancient_machine_intelligence:0 "Ancient Machine Intelligence"
-	auth_ancient_machine_intelligence_desc:0 ""
-
-	TEC_AUTH_ANCIENT_MACHINE_INTELLIGENCE_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
 
 	TEC_AUTH_AI_RULER_REPLACE:0 "§HRuler:§! The Ruler is replaced with an ['concept_tec_ai_node_icon'], an immortal §YMechanical Unit§!, which cannot gain experience naturally, needing ['concept_tec_sr_tec_ai_power'] for upkeep and to gain experience\n\n"
 	TEC_AUTH_AI_RULER_JOBS_REPLACE:0 "§HJob Replace:§! ['concept_tec_job_politician_plural_icon'] are replaced by ['concept_tec_job_tec_ai_computator_plural_icon'] (or with ['concept_tec_job_tec_ai_high_ordinator_plural_icon'] for §YSpiritualists§!)\n\n['concept_tec_building_bureaucratic_1_icon'] are replaced by ['concept_tec_building_tec_aiauth_1_icon'], providing ['concept_tec_job_tec_ai_operator_plural_icon'] (or with ['concept_tec_job_tec_ai_ordinator_plural_icon'] for §YSpiritualists§!)\n\n"
 	TEC_AUTH_AI_RULER_JOBS_MEGACORP_REPLACE:0 "§HJob Replace:§! ['concept_tec_job_executive_plural_icon'] are replaced by ['concept_tec_job_tec_ai_computator_megacorp_plural_icon'] (or with ['concept_tec_job_tec_ai_high_ordinator_megacorp_plural_icon'] for §YSpiritualists§!)\n\n['concept_tec_building_bureaucratic_1_megacorp_icon'] are replaced by ['concept_tec_building_tec_aiauth_1_icon'], providing ['concept_tec_job_tec_ai_operator_megacorp_plural_icon'] (or with ['concept_tec_job_tec_ai_ordinator_megacorp_plural_icon'] for §YSpiritualists§!)\n\n"
 	TEC_AUTH_AI_LEADER_MECHANIC_BONUS:0 "§HExclusive Mechanic:§! The §Y$tec_loc_ai_ruler_node$§! can ['concept_tec_ai_fragment'] itself into §Y$tec_loc_ai_councilor_node$§! to fill council positions. Similarly these AI Nodes consume §Y$tec_loc_sr_tec_ai_power$§! for upkeep and experience.\n\nWith §Y$tech_galactic_administration$§! you can fragment into §Y$tec_loc_ai_planetary_node$§!, a planetary governor node, by building a ['concept_tec_building_tec_planetary_node_center_icon']\n\n"
 
+	auth_tec_ai_corporate:0 "AI Corporation"
+	auth_tec_ai_corporate_desc:0 "This mega-corporation is not directly governed by a corp of CEOs or business heads, but overseen and tracked by a super efficient Artificial Intelligence, which use a part of the transactional network as its computing network, controlling each economic and vital aspects of the citizens and administration; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
+	TEC_AUTH_AI_CORPORATE_TYPES: "['concept_tec_authority_type_ai_auth'], ['concept_tec_authority_type_corporate_type']\n"
 
-	AUTH_HIVE_MIND_NEW_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n\n"
-	AUTH_HIVE_MIND_NEW_PRODUCTION_BONUS:0 "§EProduction Bonus:§! £unity£ §HUnity§! drones provide extra £amenities_no_happiness£ §HAmenities§! and £amenities_no_happiness£ §HAmenities§!.\n\n"
-
-	AUTH_TEC_HIVE_CYB_DIFF_SET:0 "§EThis authority changes gameplay and building visual and effect sets.§!\n\n"
-	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for §Y$tec_loc_energy$§! upkeep.\nAllows the §Yassimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
-	AUTH_TEC_HIVE_CYB_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n"
-	#"§EProduction Mechanic:§! £pops£ Jobs are §EMore effective§! on planets with the £stability£ §YSame Designation§!.\n\n"
-	AUTH_TEC_HIVE_CYB_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §Hempathic§!.\n"
-	AUTH_TEC_HIVE_CYB_NO_SPAWNING_POOLS:1 "§ERestriction:§! Forbids the use of £mod_pop_growth_speed£ §HSpawning Pools§!. Robotic Technologies have §Hhigher§! chance of being drawn.\n"
-	AUTH_TEC_HIVE_CYB_AP_PATHS:1 "§ERestriction:§! Following a §HBiological§! or §HReplicant§! ascension path will give the option to replace this authority."
-
+	auth_tec_hive_biological:0 "Biological Swarm"
+	auth_tec_hive_biological_desc:0 "This Collective Consciousness is formed by the unification of a series of several specialized subspecies under a same mind, genetic data and function, with a higher focus on biological evolution than technological development ;Each drone is an extension of the main consciousness, living and thinking cells of a bigger and expanding body, serving a pre-defined purpose since they are created and until they expire."
+	TEC_AUTH_TEC_HIVE_BIOLOGICAL_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
 	AUTH_TEC_HIVE_BIO_DIFF_SET:0 "§RAUTHORITY TEMPORARILY DISABLED§! §EThis authority changes gameplay and building visual and effect sets.§!\n\n"
 	AUTH_TEC_HIVE_BIO_PRODUCTION_BONUS:0 "§EAssembly Bonus:§! £building£ Swarm Capitals provide £mod_pop_growth_speed£ +§G2§!	Organic assembly.\n"
 	AUTH_TEC_HIVE_BIO_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n"
@@ -141,15 +105,49 @@
 	AUTH_TEC_HIVE_BIO_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §Hempathic§!.\n"
 	AUTH_TEC_HIVE_BIO_AP_PATHS:1 "§ERestriction:§! Following a §HCybernetic§! or §HReplicant§! ascension path will replace this authority."
 
+
+	auth_hive_mind:0 "Hive Mind"
+	auth_hive_mind_desc:1 "Hive Minds operate as a single organism more than as a state. The population has no free will, and act as an extension of the Hive Mind itself - much like the limbs of a body.\n\nWhen cut off from the Mind, these drones become comatose and eventually wither and die. Any free individuals on planets owned by the Mind are driven away, killed, or simply treated as prey to feed the collective."
+	TEC_AUTH_HIVE_MIND_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
+	AUTH_HIVE_MIND_NEW_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n\n"
+	AUTH_HIVE_MIND_NEW_PRODUCTION_BONUS:0 "§EProduction Bonus:§! £unity£ §HUnity§! drones provide extra £amenities_no_happiness£ §HAmenities§! and £amenities_no_happiness£ §HAmenities§!.\n\n"
 	#Authorities changes
 	AUTH_HIVE_MIND_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n\n"
 	AUTH_HIVE_MIND_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n\n"
 
+	auth_tec_hive_cybernetic:0 "Cybernetic Collective"
+	auth_tec_hive_cybernetic_desc:0 "This collective consciousness was formed the moment a cybernetically interconnected network of billions of individuals minds became self aware, developing rudimentary cybernetic implants which ended up transforming the whole species and reshaping its society into a single unique organism of flesh and steel; their desire now is to expand their gift, and resisting it is futile."
+	TEC_AUTH_TEC_HIVE_CYBERNETIC_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
+	AUTH_TEC_HIVE_CYB_DIFF_SET:0 "§EThis authority changes gameplay and building visual and effect sets.§!\n\n"
+	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for §Y$tec_loc_energy$§! upkeep.\nAllows the §Yassimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
+	AUTH_TEC_HIVE_CYB_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n"
+	#"§EProduction Mechanic:§! £pops£ Jobs are §EMore effective§! on planets with the £stability£ §YSame Designation§!.\n\n"
+	AUTH_TEC_HIVE_CYB_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §Hempathic§!.\n"
+	AUTH_TEC_HIVE_CYB_NO_SPAWNING_POOLS:1 "§ERestriction:§! Forbids the use of £mod_pop_growth_speed£ §HSpawning Pools§!. Robotic Technologies have §Hhigher§! chance of being drawn.\n"
+	AUTH_TEC_HIVE_CYB_AP_PATHS:1 "§ERestriction:§! Following a §HBiological§! or §HReplicant§! ascension path will give the option to replace this authority."
+
+	auth_machine_intelligence:0 "Machine Intelligence"
+	auth_machine_intelligence_desc:1 "Machine Intelligences are immense artificial group minds that have been networked into a single conscious entity. Most of the actual ''population'' in such an empire consists of mindless work units who perform their designated tasks without any semblance of free will.\n\nA small number of semi-autonomous agents are typically employed for more specialized tasks that benefit from some degree of independent initiative."
+	TEC_AUTH_MACHINE_INTELLIGENCE_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
 	AUTH_MACHINE_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £housing£ Housing§!\n\n"
-
 	AUTH_MACHINE_PRODUCTIVE_BONUS:0 "§EMechanic Bonus:§! Capitals provide a £job_tec_prime_drone£ §H$job_tec_prime_drone$§!, which scales with the planet development.\nCan create §HSpecialized £building£ Capitals§! on regular worlds, which allows fully §HAutomated§! menial planets or §HCentralized§! colonies with boosted Complex Drone output.\n\n"
-
 	AUTH_MACHINE_TEC_PROCESSCAP:0 "Drones produce and consume £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!; a lack of enough $sr_tec_machine_processing_empire$ will result in §YNegative Output§!, while an excess can be used via §HPolicies§! and §HEdicts§!, or to greatly boost a colony production if §HRedirected§!."
+
+	auth_tec_machine_consensus:0 "Synthetic Consensus"
+	auth_tec_machine_consensus_desc:1 "A Synthetic consensus is composed of several co-routinizing advanced swarm intelligences, conforming different aspects of pseudo-artificial networks collaborating to achieve mutual consensus regarding all elaborations, decisions and protocols, perpetuated and maintained individually per group. Most of the ''population'' in such an empire consists of individual platforms with unique programs executing pre-designated task according to their effectivity and consensual programming.\n\nMore advanced platforms, with a higher program load, serve as autonomous and independent agents, working to manifest the will of the collective."
+	TEC_AUTH_TEC_MACHINE_CONSENSUS_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
+	TEC_MACHINE_CONSENSUS_FACTIONS:0 "§EMechanic Bonus:§! This empire generate Factions TO DO."
+
+
+	auth_ancient_machine_intelligence:0 "Ancient Machine Intelligence"
+	auth_ancient_machine_intelligence_desc:0 ""
+	TEC_AUTH_ANCIENT_MACHINE_INTELLIGENCE_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
+
+
+
+
+
+
 
 
 	#OLD AUTH_MACHINE_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each 2 menial £district£ districts of the same category will §Hprovide 1 extra £housing£ Housing§!.\n\n"
