--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -26,19 +26,19 @@
 
 	concept_tec_authority_type_ai_auth: "AI Administrated"
 	concept_tec_authority_type_ai_auth_type: "AI Administrated Type"
-  concept_tec_authority_type_ai_auth_desc: "AI Administrated type authorities are usually characterized by having a super artifical intelligence controlling and micromanaging the state, selecting public officials to help run and control the masses which are free willed.\n\nAuthorities: §Y$auth_tec_ai$§!, §Y$auth_tec_ai_corporate$§!"
+  concept_tec_authority_type_ai_auth_desc: "AI Administrated type authorities are usually characterized by having a super artificial intelligence controlling and micromanaging the state, selecting public officials to help run and control the masses which are free willed.\n\nAuthorities: §Y$auth_tec_ai$§!, §Y$auth_tec_ai_corporate$§!"
 
   concept_tec_authority_type_hive: "Hive Minded"
   concept_tec_authority_type_hive_type: "Hive Minded Type"
-  concept_tec_authority_type_hive_desc: "Hive Minded type authorities are usually characterized by having a collective conciousness formed from biological individuals, be it caused through biological, psionic, cybernetic or other means. The population has no free will and acts as an extension of the hive mind itself.\n\nAuthorities: §Y$auth_hive_mind$§!, §Y$auth_tec_hive_cybernetic$§!, §Y$auth_tec_hive_biological$§!"
+  concept_tec_authority_type_hive_desc: "Hive Minded type authorities are usually characterized by having a collective consciousness formed from biological individuals, be it caused through biological, psionic, cybernetic or other means. The population has no free will and acts as an extension of the hive mind itself.\n\nAuthorities: §Y$auth_hive_mind$§!, §Y$auth_tec_hive_cybernetic$§!, §Y$auth_tec_hive_biological$§!"
 
-  concept_tec_authority_type_machine: "Machine Intelligence"
-  concept_tec_authority_type_machine_type: "Machine Intelligence Type"
-  concept_tec_authority_type_machine_desc: "Machine Intelligence type authorities are usually characterized by having an artifical super intelligence formed from artificial group minds that have been networked into a single conscious entity. Most population is composed of mindless work unitys without any semblence of free will.\n\nAuthorities: §Y$auth_machine_intelligence$§!, §Y$auth_ancient_machine_intelligence$§!"
+  concept_tec_authority_type_machine: "Artificial Consciousness"
+  concept_tec_authority_type_machine_type: "Artificial Consciousness Type"
+  concept_tec_authority_type_machine_desc: "Artificial Consciousness type authorities are usually characterized by having a synthetic super collective formed from artificial group minds that have been networked into a single conscious entity, either partially (collaboratively) or entirely. Most population, either composed of mindless work units without any semblance of free will or by individual platforms, have pre-designed tasks and work for the better development of the collective.\n\nAuthorities: §Y$auth_machine_intelligence$§!, §Y$auth_ancient_machine_intelligence$§!"
 
   concept_tec_authority_type_gestalt: "Gestalt Consciousness"
   concept_tec_authority_type_gestalt_type: "Gestalt Consciousness Type"
-  concept_tec_authority_type_gestalt_desc: "Gestalt Consciousness type authorities are usually characterized by having some kind of collective conciousness or mind emerging from the population, be it biological, mechanical or artificial in nature, said population lacking free will.\n\nAuthorities: §Y$auth_hive_mind$§!, §Y$auth_tec_hive_cybernetic$§!, §Y$auth_tec_hive_biological$§!, §Y$auth_machine_intelligence$§!, §Y$auth_ancient_machine_intelligence$§!"
+  concept_tec_authority_type_gestalt_desc: "Gestalt Consciousness type authorities are usually characterized by having some kind of collective consciousness or mind emerging from the population, be it biological, mechanical or artificial in nature, said population lacking free will.\n\nAuthorities: §Y$auth_hive_mind$§!, §Y$auth_tec_hive_cybernetic$§!, §Y$auth_tec_hive_biological$§!, §Y$auth_machine_intelligence$§!, §Y$auth_ancient_machine_intelligence$§!"
 # /
 
 # Civic types
