--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -242,6 +242,17 @@
 	# Changes capital and some building art
 	# Can terraform and create utopian buildings
 
+	civic_tec_foundation_fallen:0 "§B£tec_civic_foundation£§!Fallen In Grace"
+	civic_tec_foundation_fallen_desc:0 "TO DO"
+	civic_tec_foundation_fallen_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	# Pseudo FE
+
+	civic_tec_foundation_synth_coop:0 "§B£tec_civic_foundation£§!Synthetic Coexistance"
+	civic_tec_foundation_synth_coop_desc:0 "TO DO"
+	civic_tec_foundation_synth_coop_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	# Machine empire + regular empire
+
+
  # --------------- TO DO
 	civic_tec_foundation_TODO:0 "§B£tec_civic_foundation£§!Solarpunk Utopia"
 	civic_tec_foundation_TODO_desc:0 "TO DO"
