--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -536,7 +536,7 @@
 	councilor_civic_tec_corporate_mega_engineers:0 "Megaconstruction Overseer"
 	councilor_civic_tec_corporate_mega_engineers_female:0 "$councilor_civic_tec_corporate_mega_engineers$"
 	councilor_civic_tec_corporate_mega_engineers_desc:0 "The $TITLE$ devise and innovate at a megastructural scale."
-	councilor_civic_tec_corporate_mega_engineers_custom_modifier:0 "$MOD_STARBASE_UPGRADE_SPEED_MULT$: §G+2.5%§!\n$MOD_MEGASTRUCTURE_BUILD_SPEED_MULT$" §G+2.5%§!"
+	councilor_civic_tec_corporate_mega_engineers_custom_modifier:0 "$MOD_STARBASE_UPGRADE_SPEED_MULT$: §G+2.5%§!\n$MOD_MEGASTRUCTURE_BUILD_SPEED_MULT$ §G+2.5%§!"
 
 	councilor_civic_tec_corporate_land_of_opportunity:0 "Opportunity Seeker"
 	councilor_civic_tec_corporate_land_of_opportunity_female:0 "$councilor_civic_tec_corporate_land_of_opportunity$"
@@ -587,7 +587,7 @@
 	councilor_civic_tec_corporate_dystopian_society:0 "Corporate Overseer"
 	councilor_civic_tec_corporate_dystopian_society_female:0 "$councilor_civic_tec_corporate_dystopian_society$"
 	councilor_civic_tec_corporate_dystopian_society_desc:0 "The $TITLE$ seeks out corruption and extinguishes it before it can spread."
-	councilor_civic_tec_corporate_dystopian_society_custom_modifier:0 "$mod_pop_cat_ruler_happiness$: §G+1%§!\n$mod_planet_enforcers_trade_value_produces_add$: §G+0.2%§!"
+	councilor_civic_tec_corporate_dystopian_society_custom_modifier:0 "$mod_pop_cat_ruler_happiness$: §G+1%§!\n$mod_planet_enforcers_trade_value_produces_add$: §G+0.2§!"
 
 	councilor_civic_tec_corporate_navaltraders:0 "Naval Insurer"
 	councilor_civic_tec_corporate_navaltraders_female:0 "$councilor_civic_tec_corporate_navaltraders$"
