Fixed prime drone scaling issue

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -3199,6 +3199,8 @@ tech_reverse_advanced_dome: " "
 	edict_tec_fix_my_flags:0 "Fix my flags"
 	edict_tec_fix_my_flags_desc:0 "Fixed changed flags - This edict should not appear for normal empires, or appear on certain conditions"
 
+	edict_tec_fix_cache_edict: "Fix Caches"
+	edict_tec_fix_cache_edict_desc: "Recalculates cached values in case changes are required"
 
 ####################################################################
 ####################################################################
