--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -141,7 +141,7 @@
 	concept_tec_prime_drone_icon: "£pop_cat_tec_prime_drone£ $concept_tec_prime_drone$"
 	concept_tec_prime_drones: "Prime Drones"
 	concept_tec_prime_drones_icon: "£pop_cat_tec_prime_drone£ $concept_tec_prime_drones$"
-	concept_tec_prime_drone_desc: "Prime Drones are special drones given by your capital building. These drones scale their effects with the tier of your capital building, the base being considered at a Tier 2 capital.\n\nScaling is as follows:\n-Tier 1 (Colony Capital): §Y0.5x§!\n-Tier 2 (Capital): §Y1x§!\n-Tier 3 (Major Capital): §Y1.5x§!\n-Tier 4 (System Capital): §Y3x§!\n-Tier 5 (Galactic Capital): §Y4.5x§!\n-Tier 6 (Imperial Capital): §Y6x§!\n\n§RHabitats have a scaling penalty of §Y-0.5x§!§!"
+	concept_tec_prime_drone_desc: "Prime Drones are special drones given by your capital building. These drones scale their effects with the tier of your capital building, the base being considered at a Tier 2 capital.\n\nNormal Scaling is as follows:\n-Tier 1 (Colony Capital): §Y0.5x§!\n-Tier 2 (Capital) and at least $@pops_t2$ pops: §Y1x§!\n-Tier 3 (Major Capital) and at least $@pops_t3$ pops: §Y1.5x§!\n-Tier 4 (System Capital) and least $@pops_t4$ pops: §Y3x§!\n-Tier 5 (Galactic Capital) and at least $@pops_t5$ pops: §Y4.5x§!\n\nHabitats Scaling as follows:\n-Tier 2 (Habitat Capital): §Y0.5x§!\n-Tier 3 (Major Habitat Capital) and at least $@pops_t2$ pops: §Y1x§!\n-Tier 4 (System Habitat Capital) and at least $@pops_t3$ pops: §Y2x§!\n\nImperial Capital Scaling (overwrites above): §Y6x§!"
 
 	concept_tec_decision_tec_environment_enhance: "$decision_tec_environment_enhance$"
 	concept_tec_decision_tec_environment_enhance_icon: "£decision£ $concept_tec_decision_tec_environment_enhance$"
