VD small tuning down, capital building tags qol

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -196,6 +196,24 @@ tec_jump_empty:0 "\n\n"
  building_tec_cyberhive_relay_3:0 "Network Hiper-Relay"
  building_tec_cyberhive_relay_3_desc:0 "The nerve center of all intra-communication that occurs between the quintillions of semi-sapient and sapient systems that administers our empire."
 
+ # Capital tags and desc
+ building_tec_capital_regular_tag: "\n§ERegular Capital§!"
+ building_tec_capital_regular_extraction_tag: "\n§ERegular Capital (Extraction)§!"
+ building_tec_capital_regular_production_tag: "\n§ERegular Capital (Production)§!"
+ building_tec_capital_special_tag: "\n§ESpecial Capital§!"
+ building_tec_capital_habitat_tag: "\n§EHabitat Capital§!"
+ building_tec_branch_capital_tag: "\n§EBranch Office Capital§!"
+
+ building_tec_capital_tier_1_tag: "§HTier 1 (Colony)§!"
+ building_tec_capital_tier_2_tag: "§HTier 2 (Capital)§!"
+ building_tec_capital_tier_3_tag: "§HTier 3 (Major)§!"
+ building_tec_capital_tier_4_tag: "§HTier 4 (System)§!"
+ building_tec_capital_tier_5_tag: "§HTier 5 (Galactic)§!"
+ building_tec_capital_tier_6_tag: "§HTier 6 (Imperial)§!"
+
+ building_tec_branch_tier_1_tag: "§HTier 1§!"
+ building_tec_branch_tier_2_tag: "§HTier 2§!"
+ building_tec_branch_tier_3_tag: "§HTier 3§!"
 
 # ------------------------------------------------- Regular jobs
  job_supervisor_bureaucrat:0 "Supervisor"
