Some more VD adjustments

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -13,7 +13,7 @@
  #megacorp origin text
 	origin_tooltip_common_ground_effects:0 "- Start as the leader of a §HFederation§! with two additional members\n- The federation type is altered by the empire §YAuthority§! and §YEthics§!.\n- Members will occupy any Guaranteed Habitable Worlds slots near your home system\n- Start with §HThe Federation§! tradition unlocked"
 	
-	origin_tooltip_void_dwellers_effects:5 "- Start with three §YOrbital Habitats§! and the technology to build more\n- Members of your species thrive on Habitats and produce §G10%§! more there\n- Colony ships have £alloys£ £influence£ §YAdditional costs§!, but newly built habitats are instantly colonized.\n- Severe habitability, production and growth penalties are applied on all regular planets, except §GHabitats§!, §YArcologies§! or §YPerfect§! planets\n- Capital Buildings provide §G+1§! extra £building£ §YBuilding slot§! per level on habitats."
+	origin_tooltip_void_dwellers_effects:5 "- Start with three §YOrbital Habitats§! and the technology to build more\n- Members of your species thrive on Habitats and produce §G10%§! more there\n- Colony ships have £alloys£ £influence£ §YAdditional costs§!, but newly built habitats are instantly colonized.\n- Severe habitability, production and growth penalties are applied on all regular planets, except §GHabitats§!, §YArcologies§! or §YPerfect§! planets\n- Capital Buildings provide §G+1§! extra £building£ §YBuilding slot§! per level on habitats.\n - Starts with §Y24§! Pops, but compensated through automated habitat menial districts."
 	# Hydroponic Farms have §G+1§! £job_farmer£ $job_farmer$ Job
 	#\n\n§RNon Arcology colonies requires forced pop growth.§!
 
